--- a/Forecourt Documents/Environment/PList/Dev.plist
+++ b/Forecourt Documents/Environment/PList/Dev.plist
@@ -43,8 +43,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>PulseURL</key>
-	<string>https://$(PULSE_URL)</string>
+	<key>DocumentStorageURL</key>
+	<string>https://$(DOCUMENT_STORAGE_URL)</string>
 	<key>Environment</key>
 	<string>$(ENVIRONMENT)</string>
 	<key>S3URL</key>
