--- a/FCT Operations.xcodeproj/xcshareddata/xcschemes/Forecourt Operations (Dev).xcscheme
+++ b/FCT Operations.xcodeproj/xcshareddata/xcschemes/Forecourt Operations (Dev).xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-               BuildableName = "Forecourt Operations App.app"
-               BlueprintName = "Forecourt Operations App"
-               ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+               BuildableName = "FCT Operations.app"
+               BlueprintName = "FCT Operations"
+               ReferencedContainer = "container:FCT Operations.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,9 +45,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-            BuildableName = "Forecourt Operations App.app"
-            BlueprintName = "Forecourt Operations App"
-            ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+            BuildableName = "FCT Operations.app"
+            BlueprintName = "FCT Operations"
+            ReferencedContainer = "container:FCT Operations.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-            BuildableName = "Forecourt Operations App.app"
-            BlueprintName = "Forecourt Operations App"
-            ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+            BuildableName = "FCT Operations.app"
+            BlueprintName = "FCT Operations"
+            ReferencedContainer = "container:FCT Operations.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
