--- a/FCT Operations.xcodeproj/xcshareddata/xcschemes/Forecourt Operations (Staging).xcscheme
+++ b/FCT Operations.xcodeproj/xcshareddata/xcschemes/Forecourt Operations (Staging).xcscheme
@@ -15,15 +15,15 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-               BuildableName = "Forecourt Operations App.app"
-               BlueprintName = "Forecourt Operations App"
-               ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+               BuildableName = "FCT Operations.app"
+               BlueprintName = "FCT Operations"
+               ReferencedContainer = "container:FCT Operations.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug (Live)"
+      buildConfiguration = "Debug (Staging)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug (Live)"
+      buildConfiguration = "Debug (Staging)"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,14 +45,14 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-            BuildableName = "Forecourt Operations App.app"
-            BlueprintName = "Forecourt Operations App"
-            ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+            BuildableName = "FCT Operations.app"
+            BlueprintName = "FCT Operations"
+            ReferencedContainer = "container:FCT Operations.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release (Live)"
+      buildConfiguration = "Release (Staging)"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -62,17 +62,17 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C8A88D48269C7D1E00F4960B"
-            BuildableName = "Forecourt Operations App.app"
-            BlueprintName = "Forecourt Operations App"
-            ReferencedContainer = "container:Forecourt Operations App.xcodeproj">
+            BuildableName = "FCT Operations.app"
+            BlueprintName = "FCT Operations"
+            ReferencedContainer = "container:FCT Operations.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug (Live)">
+      buildConfiguration = "Debug (Staging)">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release (Live)"
+      buildConfiguration = "Release (Staging)"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
