--- a/Forecourt Operations App/Environment/Config/Staging.xcconfig
+++ b/Forecourt Operations App/Environment/Config/Staging.xcconfig
@@ -9,4 +9,4 @@ ENVIRONMENT = STAGING
 
 DOCUMENT_STORAGE_URL = forecourt-operational-stage.moto-hospitality.co.uk
 
-S3_URL = s3.stage.moto-security.int
+S3_URL = s3-stage.moto-hospitality.co.uk
